# ebirforms-rebuilt-rs-oss

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DISCLAIMER.md  Dockerfile.web  LICENSE.md  PROVENANCE.md  README.md  SECURITY.md  compose.web.yaml  devenv.nix  mise.toml
.github/workflows/: release-cli.yml  release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/frontend/: Cargo.toml  index.html  package-lock.json  package.json
apps/desktop/frontend/src/: form_1701q.rs  main.rs  styles.css  tauri.js
apps/desktop/scripts/: ensure-himalaya.sh  ensure-trunk.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  state.rs
apps/web/frontend/: Cargo.toml  index.html
apps/web/frontend/src/: api.js  guided.css  main.rs  styles.css
apps/web/scripts/: web-dev.sh
crates/ebirforms-cli/: Cargo.toml
crates/ebirforms-cli/src/: main.rs
crates/ebirforms-core/: Cargo.toml  build.rs
crates/ebirforms-core/forms/0619E/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/1601C/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/1601EQ/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/1701Q/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/1702Q/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/2000/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/forms/2550Q/: form.toml  mapping.toml  template.xml
crates/ebirforms-core/src/: crypto.rs  form.rs  job.rs  lib.rs  package.rs  pdf1601c.rs  profile.rs  receipt.rs  submission.rs  transport.rs
crates/ebirforms-core/tests/: pdf_1601c.rs
crates/ebirforms-web/: Cargo.toml
crates/ebirforms-web-schema/: Cargo.toml
crates/ebirforms-web-schema/src/: lib.rs
crates/ebirforms-web/src/: lib.rs  main.rs  server.rs  ui.rs
deploy/: Caddyfile
docs/: BUILD_ARTIFACTS.md  desktop-1601c-demo-script.md  desktop-tax-form-flow-demo-script.md  live-submission-1601c-runbook.md  session-knowledge-handoff.md  web-intake.md
docs/architecture/: optimized-programmatic-submission-plan.md  programmatic-submission-build-evaluation.md
docs/plans/: 2026-07-10-desktop-1601c-demo-upgrade.md  2026-07-10-desktop-multiform-tax-flow-upgrade.md
docs/skills/add-bir-form-1701q/: SKILL.md
scripts/: package-cli-himalaya.sh  submit-1601c-live.sh
tests/fixtures/0619E/: input.json  synthetic_plaintext.xml
tests/fixtures/1601C/: input.json  official_encrypted.xml  official_plaintext.xml  receipt_accepted.txt  synthetic_encrypted.xml  synthetic_filename.txt  synthetic_plaintext.xml
tests/fixtures/1601EQ/: input.json  synthetic_plaintext.xml
tests/fixtures/1701Q/: input.json  synthetic_plaintext.xml
tests/fixtures/1702Q/: input.json  synthetic_plaintext.xml
tests/fixtures/2000/: input.json  synthetic_plaintext.xml
tests/fixtures/2550Q/: input.json  synthetic_plaintext.xml
