[package]
name = "ebirforms-cli"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
embed-bir-sftp-secrets = ["ebirforms-core/embed-bir-sftp-secrets"]

[dependencies]
ebirforms-core = { path = "../ebirforms-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
