[package]
name = "ebirforms-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
ebirforms-core = { path = "../ebirforms-core" }
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
