[package]
name = "ebirforms-desktop-frontend"
version = "0.1.4"
edition = "2021"
license-file = "../../../LICENSE.md"
rust-version = "1.75"

[workspace]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Window",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
