[package]
name = "ebirforms-desktop"
version = "0.1.4"
edition = "2021"
license = "LicenseRef-FSL-1.1-ALv2"
rust-version = "1.88"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ebirforms-core = { path = "../../../crates/ebirforms-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
