[package]
name = "ebirforms-web-frontend"
version = "0.1.0"
edition = "2021"
license-file = "../../../LICENSE.md"
rust-version = "1.75"

[workspace]

[dependencies]
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "Window"] }
